#554 Add horror/awareness/brawn for MoM monsters

--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -13,6 +13,7 @@ health=1
 healthperhero=1
 awareness=3
 horror=1
+brawn=2
 
 [MonsterDeepOne]
 ; Optional name for display (if spaces or other formatting required)
@@ -26,6 +27,9 @@ image="{import}/img/Monster_Deep_One.dds"
 health=2
 healthperhero=1
 traits=humanoid
+awareness=3
+horror=4
+brawn=2
 
 [MonsterDeepOneHybrid]
 ; Optional name for display (if spaces or other formatting required)
@@ -39,6 +43,9 @@ image="{import}/img/Monster_Deep_One_Hybrid.dds"
 health=2
 healthperhero=1
 traits=humanoid
+awareness=3
+horror=1
+brawn=2
 
 [MonsterGhost]
 ; Optional name for display (if spaces or other formatting required)
@@ -52,6 +59,9 @@ image="{import}/img/Monster_Ghost.dds"
 health=1
 healthperhero=1
 traits=spirit
+awareness=2
+horror=5
+brawn=1
 
 [MonsterHuntingHorror]
 ; Optional name for display (if spaces or other formatting required)
@@ -65,6 +75,9 @@ image="{import}/img/Monster_Hunting_Horror.dds"
 health=3
 healthperhero=1
 traits=beast
+awareness=5
+horror=6
+brawn=3
 
 [MonsterRiot]
 ; Optional name for display (if spaces or other formatting required)
@@ -78,6 +91,9 @@ image="{import}/img/Monster_Riot.dds"
 health=5
 healthperhero=3
 traits=humanoid
+awareness=7
+horror=4
+brawn=4
 
 [MonsterStarSpawn]
 ; Optional name for display (if spaces or other formatting required)
@@ -91,6 +107,9 @@ image="{import}/img/Monster_Star_Spawn.dds"
 health=9
 healthperhero=3
 traits=beast
+awareness=5
+horror=8
+brawn=5
 
 [MonsterChildOfDagon]
 ; Optional name for display (if spaces or other formatting required)
@@ -104,6 +123,9 @@ image="{import}/img/Monster_Child_Of_Dagon.dds"
 health=1
 healthperhero=1
 traits=humanoid
+awareness=4
+horror=3
+brawn=2
 
 [MonsterPriestOfDagon]
 ; Optional name for display (if spaces or other formatting required)
@@ -117,3 +139,6 @@ image="{import}/img/Monster_Priest_Of_Dagon.dds"
 health=2
 healthperhero=2
 traits=humanoid
+awareness=4
+horror=3
+brawn=2
