--- a/content/MoM/ck/fa-monsters/monsters.ini
+++ b/content/MoM/ck/fa-monsters/monsters.ini
@@ -10,6 +10,9 @@ image="{import}/img/Monster_Byakhee.dds"
 health=1
 healthperhero=2
 traits=beast
+awareness=4
+horror=3
+brawn=2
 
 [MonsterCrawlingOne]
 ; Optional name for display (if spaces or other formatting required)
@@ -23,3 +26,6 @@ image="{import}/img/Monster_Crawling_One.dds"
 health=3
 healthperhero=1
 traits=beast
+awareness=2
+horror=4
+brawn=4
