--- a/content/MoM/ck/cotw-monsters/monsters.ini
+++ b/content/MoM/ck/cotw-monsters/monsters.ini
@@ -10,6 +10,9 @@ image="{import}/img/Monster_Child_Of_The_Goat.dds"
 health=1
 healthperhero=1
 traits=humanoid
+awareness=3
+horror=1
+brawn=2
 
 [MonsterDarkDruid]
 ; Optional name for display (if spaces or other formatting required)
@@ -23,6 +26,9 @@ image="{import}/img/Monster_Dark_Druid.dds"
 health=2
 healthperhero=1
 traits=humanoid
+awareness=3
+horror=2
+brawn=2
 
 [MonsterDarkYoung]
 ; Optional name for display (if spaces or other formatting required)
@@ -36,6 +42,9 @@ image="{import}/img/Monster_Dark_Young.dds"
 health=4
 healthperhero=2
 traits=beast
+awareness=4
+horror=7
+brawn=5
 
 [MonsterGoatSpawn]
 ; Optional name for display (if spaces or other formatting required)
@@ -49,6 +58,9 @@ image="{import}/img/Monster_Goat_Spawn.dds"
 health=1
 healthperhero=2
 traits=humanoid
+awareness=4
+horror=3
+brawn=2
 
 [MonsterNightgaunt]
 ; Optional name for display (if spaces or other formatting required)
@@ -62,6 +74,9 @@ image="{import}/img/Monster_Nightgaunt.dds"
 health=1
 healthperhero=2
 traits=beast
+awareness=6
+horror=5
+brawn=3
 
 [MonsterDunwichHorror]
 ; Optional name for display (if spaces or other formatting required)
@@ -75,6 +90,9 @@ image="{import}/img/Monster_Dunwich_Horror.dds"
 health=2
 healthperhero=3
 traits=horror
+awareness=7
+horror=9
+brawn=5
 
 [MonsterWizard]
 ; Optional name for display (if spaces or other formatting required)
@@ -88,3 +106,6 @@ image="{import}/img/Monster_Wizard.dds"
 health=2
 healthperhero=1
 traits=humanoid
+awareness=4
+horror=3
+brawn=2
