--- a/content/MoM/ck/mom1e-monsters/monsters.ini
+++ b/content/MoM/ck/mom1e-monsters/monsters.ini
@@ -11,6 +11,9 @@ traits=undead small humanoid
 ; Optional health modifier from number of players
 health=2
 healthperhero=1
+awareness=2
+horror=4
+brawn=2
 
 [MonsterCthonian]
 ; Optional name for display (if spaces or other formatting required)
@@ -24,6 +27,9 @@ image="{import}/img/Monster_Cthonian.dds"
 health=3
 healthperhero=2
 traits=beast
+awareness=4
+horror=7
+brawn=5
 
 [MonsterHoundOfTindalos]
 ; Optional name for display (if spaces or other formatting required)
@@ -37,6 +43,9 @@ image="{import}/img/Monster_Hound_Of_Tindalos.dds"
 health=1
 healthperhero=2
 traits=beast
+awareness=6
+horror=5
+brawn=5
 
 [MonsterManiac]
 ; Optional name for display (if spaces or other formatting required)
@@ -50,6 +59,9 @@ image="{import}/img/Monster_Maniac.dds"
 health=2
 healthperhero=1
 traits=humanoid
+awareness=5
+horror=1
+brawn=2
 
 [MonsterMiGo]
 ; Optional name for display (if spaces or other formatting required)
@@ -63,6 +75,9 @@ image="{import}/img/Monster_Mi_Go.dds"
 health=3
 healthperhero=1
 traits=beast
+awareness=6
+horror=4
+brawn=3
 
 [MonsterShoggoth]
 ; Optional name for display (if spaces or other formatting required)
@@ -76,6 +91,9 @@ image="{import}/img/Monster_Shoggoth.dds"
 health=4
 healthperhero=2
 traits=beast
+awareness=4
+horror=6
+brawn=4
 
 [MonsterWitch]
 ; Optional name for display (if spaces or other formatting required)
@@ -89,6 +107,9 @@ image="{import}/img/Monster_Witch.dds"
 health=2
 healthperhero=1
 traits=humanoid
+awareness=3
+horror=2
+brawn=2
 
 [MonsterCultLeader]
 ; Optional name for display (if spaces or other formatting required)
@@ -102,3 +123,6 @@ image="{import}/img/Monster_Cult_Leader.dds"
 health=8
 healthperhero=4
 traits=humanoid
+awareness=4
+horror=3
+brawn=2
