added spanish localization file in content_pack.ini

--- a/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
@@ -41,3 +41,4 @@ tokens_monsters.ini
 pck Localization.English.txt
 pck Localization.German.txt
 pck Localization.Polish.txt
+pck Localization.Spanish.txt
