Adding RtL 1.4 assets.

--- a/unity/Assets/StreamingAssets/content/D2E/base/audio.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/audio.ini
@@ -145,3 +145,33 @@ file="{import}/audio/RewardPass_01.ogg"
 
 [AudioRiver]
 file="{import}/audio/River_01.ogg"
+
+[AudioToFG01]
+file="{import}/audio/ToFG_01.ogg"
+
+[AudioToFGEpilogue]
+file="{import}/audio/ToFG_Epilogue.ogg"
+
+[AudioToFGPrologueBear]
+file="{import}/audio/ToFG_PrologueBear.ogg"
+
+[AudioToFGPrologueHawk]
+file="{import}/audio/ToFG_PrologueHawk.ogg"
+
+[AudioToFGPrologueLion]
+file="{import}/audio/ToFG_PrologueLion.ogg"
+
+[AudioToFGPrologueWolf]
+file="{import}/audio/ToFG_PrologueWolf.ogg"
+
+[AudioTrialBearSelected]
+file="{import}/audio/TrialBearSelected_01.ogg"
+
+[AudioTrialHawkSelected]
+file="{import}/audio/TrialHawkSelected_01.ogg"
+
+[AudioTrialLionSelected]
+file="{import}/audio/TrialLionSelected_01.ogg"
+
+[AudioTrialWolfSelected]
+file="{import}/audio/TrialWolfSelected_01.ogg"
