--- a/unity/Assets/StreamingAssets/content/D2E/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/images.ini
@@ -248,3 +248,39 @@ image="{import}/img/TheDelve_Icon.dds"
 
 [ImageWoodSlab]
 image="{import}/img/WoodSlab.dds"
+
+[ImageTrialGirl]
+image="{import}/img/FG_girl.dds"
+
+[ImageFrostGateBackground]
+image="{import}/img/Frostgate_BG.dds"
+
+[ImageFrostgateEpilogue]
+image="{import}/img/Frostgate_Epilogue.dds"
+
+[ImageFrostgateIcon]
+image="{import}/img/Frostgate_Icon.dds"
+
+[ImageFrostgateLockedIcon]
+image="{import}/img/Frostgate_Locked_Icon.dds"
+
+[ImageFrostgatePrologue]
+image="{import}/img/Frostgate_Prologue.dds"
+
+[ImageFrostgateMenu]
+image="{import}/img/FrostGateMenuPage.dds"
+
+[ImageIconBear]
+image="{import}/img/Icon_Bear.dds"
+
+[ImageIconHawk]
+image="{import}/img/Icon_Hawk.dds"
+
+[ImageIconLion]
+image="{import}/img/Icon_Lion.dds"
+
+[ImageIconWolf]
+image="{import}/img/Icon_Wolf.dds"
+
+[ImageLogoFrostgate]
+image="{import}/img/Logo_Frostgate.dds"
