--- a/unity/Assets/StreamingAssets/content/D2E/boxed/mor/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/mor/tiles.ini
@@ -10,10 +10,9 @@ reverse=TileSide70B
 
 [TileSide70B]
 name="70B"
-top=72
-left=72
-pps=72
-image="img/070B.png"
+top=197
+left=197
+image="{import}/img/070B.dds"
 traits=inside
 reverse=TileSide70A
 
