--- a/unity/Assets/StreamingAssets/content/D2E/boxed/son/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/son/tiles.ini
@@ -310,10 +310,9 @@ reverse=TileSide68A
 
 [TileSide69A]
 name="69A"
-top=72
-left=72
-pps=72
-image="img/069A.png"
+top=151
+left=151
+image="{import}/img/069A.dds"
 traits=city
 reverse=TileSide69B
 
