--- a/unity/Assets/StreamingAssets/content/D2E/boxed/tctr/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/boxed/tctr/tiles.ini
@@ -50,10 +50,9 @@ reverse=TileSide90A
 
 [TileSide91A]
 name="91A"
-top=72
-left=72
-pps=72
-image="img/091A.png"
+top=197
+left=289
+image="{import}/img/091A.dds"
 traits=outside
 reverse=TileSide91B
 
@@ -164,10 +163,9 @@ reverse=TileSide97A
 
 [TileSide98A]
 name="98A"
-top=72
-left=72
-pps=72
-image="img/098A.png"
+top=46
+left=203.5
+image="{import}/img/098A.dds"
 traits=outside
 reverse=TileSide98B
 
