#588 Adding more MoM images.

--- a/unity/Assets/StreamingAssets/content/MoM/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/images.ini
@@ -10,6 +10,9 @@ image="{import}/img/artOldJournal_3x3.dds"
 [ImageartTheUsualSuspects_4x2]
 image="{import}/img/artTheUsualSuspects_4x2.dds"
 
+[ImageartEVEAL3x3]
+image="{import}/img/artEVEAL3x3.dds"
+
 [ImageCloudsGrey]
 image="{import}/img/Clouds_Wrappable.dds"
 
@@ -102,6 +105,9 @@ image="{import}/img/Scenario_VI.dds"
 
 [ImageScenario_WLW]
 image="{import}/img/Scenario_WLW.dds"
+
+[ImageScenario_DR]
+image="{import}/img/Scenario_DR.dds"
 
 [ImageSceneryBushLeft]
 image="{import}/img/Scenery_Bush_Left.dds"
