--- a/unity/Assets/StreamingAssets/content/MoM/ck/mom1e-tiles/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/ck/mom1e-tiles/tiles.ini
@@ -45,8 +45,7 @@ reverse=TileSideHallway2
 
 [TileSideCornerHallway]
 name={ffg:TILE_CORNER_HALLWAY_1_MAD01}
-image="img/Tile_Corner_Hallway_1_MAD01.jpg"
-pps=72
+image="{import}/img/Tile_Corner_Hallway_1_MAD01.dds"
 traits=inside medium hallway bathroom
 reverse=TileSideRootCellar1E
 
