First pass at tile data.

--- a/unity/Assets/StreamingAssets/content/D2E/base/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/tiles.ini
@@ -21,8 +21,17 @@ name="1B"
 top=197
 left=105
 image="{import}/img/001B.dds"
-traits=throne inside
+traits=throne inside building
 reverse=TileSide1A
+zeropos=1,1
+map00=    B    
+map01= ##*#####
+map02= ##*#####
+map03= ########
+map04=B########
+map05= ##*#####
+map06= ##*#####
+map07=     B   
 
 [TileSide2A]
 name="2A"
@@ -37,8 +46,17 @@ name="2B"
 top=197
 left=197
 image="{import}/img/002B.dds"
-traits=dirt inside
+traits=dirt inside cave
 reverse=TileSide2A
+zeropos=0,1
+map00=  B   
+map01=######
+map02=######
+map03=######
+map04=######
+map05=######
+map06=######
+map07=   B  
 
 [TileSide3A]
 name="3A"
@@ -53,8 +71,14 @@ name="3B"
 top=289
 left=197
 image="{import}/img/003B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide3A
+zeropos=1,0
+map00= ###### 
+map01= ######B
+map02=B###### 
+map03= ###### 
+map04=    B   
 
 [TileSide4A]
 name="4A"
@@ -69,8 +93,16 @@ name="4B"
 top=210
 left=210
 image="{import}/img/004B.dds"
-traits=inside pit dirt
+traits=inside pit dirt cave dark
 reverse=TileSide4A
+zeropos=1,1
+map00=   B   
+map01= ######
+map02= ____#_
+map03= ######
+map04=B######
+map05= ######
+map06= ######
 
 [TileSide5A]
 name="5A"
@@ -85,8 +117,14 @@ name="5B"
 top=289
 left=197
 image="{import}/img/005B.dds"
-traits=inside dirt
+traits=inside dirt cave
 reverse=TileSide5A
+zeropos=1,0
+map00= ###### 
+map01= ######B
+map02=B###### 
+map03= ###### 
+map04=    B   
 
 [TileSide6A]
 name="6A"
@@ -101,8 +139,17 @@ name="6B"
 top=197
 left=302
 image="{import}/img/006B.dds"
-traits=inside dirt
+traits=inside dirt building
 reverse=TileSide6A
+zeropos=0,1
+map00= B  
+map01=####
+map02=####
+map03=####
+map04=####
+map05=####
+map06=####
+map07=  B 
 
 [TileSide7A]
 name="7A"
@@ -117,8 +164,15 @@ name="7B"
 top=302
 left=197
 image="{import}/img/007B.dds"
-traits=inside snow
+traits=inside cold cave
 reverse=TileSide7A
+zeropos=0,1
+map00= B    
+map01=######
+map02=######
+map03=######
+map04=######
+map05=    B 
 
 [TileSide8A]
 name="8A"
@@ -133,8 +187,14 @@ name="8B"
 top=59
 left=59
 image="{import}/img/008B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide8A
+zeropos=1,1
+map00=  B  
+map01= ####
+map02= ####
+map03=B####
+map04= ####
 
 [TileSide9A]
 name="9A"
@@ -149,8 +209,14 @@ name="9B"
 top=59
 left=46
 image="{import}/img/009B.dds"
-traits=inside dirt
+traits=inside dirt cave
 reverse=TileSide9A
+zeropos=1,1
+map00=  B   
+map01= #### 
+map02= ####B
+map03=B#### 
+map04= #### 
 
 [TileSide10A]
 name="10A"
@@ -165,8 +231,13 @@ name="10B"
 top=46
 left=46
 image="{import}/img/010B.dds"
-traits=inside tomb
+traits=inside tomb building
 reverse=TileSide10A
+zeropos=1,0
+map00= #### 
+map01= ####B
+map02=B#### 
+map03= #### 
 
 [TileSide11A]
 name="11A"
@@ -181,8 +252,13 @@ name="11B"
 top=46
 left=46
 image="{import}/img/011B.dds"
-traits=inside tomb
+traits=inside tomb building
 reverse=TileSide11A
+zeropos=1,0
+map00= #### 
+map01= ####B
+map02=B#### 
+map03= #### 
 
 [TileSide12A]
 name="12A"
@@ -197,8 +273,16 @@ name="12B"
 top=233.5
 left=233.5
 image="{import}/img/012B.dds"
-traits=inside dirt lava
+traits=inside dirt lava cave hot
 reverse=TileSide12A
+zeropos=0,0
+map00=####  
+map01=#####B
+map02=##!!# 
+map03=##!   
+map04= ##   
+map05=  B   
+
 
 [TileSide13A]
 name="13A"
@@ -213,8 +297,17 @@ name="13B"
 top=197
 left=197
 image="{import}/img/013B.dds"
-traits=inside library
+traits=inside library building
 reverse=TileSide13A
+zeropos=0,1
+map00=  B   
+map01= #### 
+map02=######
+map03=######
+map04=######
+map05=    ##
+map06=    ##
+map07=     B
 
 [TileSide14A]
 name="14A"
@@ -229,8 +322,13 @@ name="14B"
 top=46
 left=46
 image="{import}/img/014B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide14A
+zeropos=1,0
+map00= ###  
+map01= ####B
+map02=B#### 
+map03= ###  
 
 [TileSide15A]
 name="15A"
@@ -245,8 +343,15 @@ name="15B"
 top=302
 left=249.5
 image="{import}/img/015B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide15A
+zeropos=0,1
+map00= B    
+map01= ##  
+map02=#####
+map03=#####
+map04=   ##
+map05=    B
 
 [TileSide16A]
 name="16A"
@@ -261,8 +366,15 @@ name="16B"
 top=46
 left=46
 image="{import}/img/016B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide16A
+zeropos=1,1
+map00=  B   
+map01=  ##  
+map02= ####B
+map03=B#### 
+map04=  ##  
+map05=   B  
 
 [TileSide17A]
 name="17A"
@@ -277,8 +389,14 @@ name="17B"
 top=59
 left=33
 image="{import}/img/017B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide17A
+zeropos=0,1
+map00=B    
+map01=##   
+map02=##   
+map03=####B
+map04=#### 
 
 [TileSide18A]
 name="18A"
@@ -294,8 +412,14 @@ top=21.5
 left=3.5
 pps=72
 image="img/018B.png"
-traits=inside
+traits=inside building
 reverse=TileSide18A
+zeropos=0,1
+map00=B    
+map01=##   
+map02=##   
+map03=####B
+map04=#### 
 
 [TileSide19A]
 name="19A"
@@ -310,8 +434,17 @@ name="19B"
 top=197
 left=354.5
 image="{import}/img/019B.dds"
-traits=inside stairs
+traits=inside stairs building
 reverse=TileSide19A
+zeropos=0,1
+map00=B  
+map01=###
+map02=###
+map03=###
+map04=###
+map05=###
+map06=###
+map07=  B
 
 [TileSide20A]
 name="20A"
@@ -326,8 +459,18 @@ name="20B"
 top=105
 left=341.5
 image="{import}/img/020B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide20A
+zeropos=0,1
+map00= B  
+map01=### 
+map02=### 
+map03=##  
+map04=##  
+map05=##  
+map06=##  
+map07=###B
+map08=### 
 
 [TileSide21A]
 name="21A"
@@ -342,8 +485,12 @@ name="21B"
 top=354.5
 left=197
 image="{import}/img/021B.dds"
-traits=inside water
+traits=inside water building
 reverse=TileSide21A
+zeropos=1,0
+map00= ##~~## 
+map01=B##~~##B
+map02= ##~~## 
 
 [TileSide22A]
 name="22A"
@@ -358,8 +505,11 @@ name="22B"
 top=407
 left=197
 image="{import}/img/022B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide22A
+zeropos=1,0
+map00= ######B
+map01=B###### 
 
 [TileSide23A]
 name="23A"
@@ -374,8 +524,12 @@ name="23B"
 top=394
 left=197
 image="{import}/img/023B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide23A
+zeropos=1,0
+map00= ######B
+map01=B###### 
+map02=    B   
 
 [TileSide24A]
 name="24A"
@@ -390,8 +544,12 @@ name="24B"
 top=394
 left=210
 image="{import}/img/024B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide24A
+zeropos=1,0
+map00= ######
+map01=B######
+map02=      B
 
 [TileSide25A]
 name="25A"
@@ -406,8 +564,16 @@ name="25B"
 top=210
 left=394
 image="{import}/img/025B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide25A
+zeropos=0,1
+map00=B  
+map01=## 
+map02=## 
+map03=## 
+map04=## 
+map05=##B
+map06=## 
 
 [TileSide26A]
 name="26A"
@@ -422,8 +588,14 @@ name="26B"
 top=98.5
 left=46
 image="{import}/img/026B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide26A
+zeropos=0,1
+map00= B  
+map01= ## 
+map02=####
+map03=####
+map04=  B 
 
 [TileSide27A]
 name="27A"
@@ -438,8 +610,13 @@ name="27B"
 top=46
 left=151
 image="{import}/img/027B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide27A
+zeropos=1,0
+map00= ## 
+map01=B## 
+map02= ##B
+map03= ## 
 
 [TileSide28A]
 name="28A"
@@ -454,8 +631,13 @@ name="28B"
 top=151
 left=46
 image="{import}/img/028B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide28A
+zeropos=0,1
+map00=B   
+map01=####
+map02=####
+map03=   B
 
 [TileSide29A]
 name="29A"
@@ -470,8 +652,11 @@ name="29B"
 top=151
 left=46
 image="{import}/img/029B.dds"
-traits=inside
+traits=inside building
 reverse=TileSide29A
+zeropos=1,0
+map00= ####B
+map01=B#### 
 
 [TileSide30A]
 name="30A"
@@ -487,8 +672,11 @@ top=3.5
 left=21.5
 pps=72
 image="img/030B.png"
-traits=inside
+traits=inside building
 reverse=TileSide30A
+zeropos=1,0
+map00= ####B
+map01=B#### 
 
 [TileSideCapA]
 name="CapA"
@@ -497,6 +685,9 @@ left=23
 image="{import}/img/Cap02.dds"
 traits=outside
 reverse=TileSideCapB
+zeropos=0,1
+map00= A
+map01=##
 
 [TileSideCapB]
 name="CapB"
@@ -505,38 +696,57 @@ left=23
 image="{import}/img/Cap01.dds"
 traits=inside
 reverse=TileSideCapA
+zeropos=0,1
+map00=B 
+map01=##
 
 [TileSideEntranceA]
 name="EntranceA"
 top=36
 left=23
 image="{import}/img/Exit02.dds"
-traits=outside
+traits=outside entrance
 reverse=TileSideEntranceB
+zeropos=0,1
+map00= A
+map01=##
+map02=##
 
 [TileSideEntranceB]
 name="EntranceB"
 top=36
 left=23
 image="{import}/img/Entrance01.dds"
-traits=inside
+traits=inside entrance
 reverse=TileSideEntranceA
+zeropos=0,1
+map00=B 
+map01=##
+map02=##
 
 [TileSideEntranceStairA]
 name="EntranceStairA"
 top=36
 left=23
 image="{import}/img/Exit01.dds"
-traits=outside
+traits=outside entrance
 reverse=TileSideEntranceStairB
+zeropos=0,1
+map00= A
+map01=##
+map02=##
 
 [TileSideEntranceStairB]
 name="EntranceStairB"
 top=36
 left=23
 image="{import}/img/Entrance02.dds"
-traits=inside
+traits=inside entrance
 reverse=TileSideEntranceStairA
+zeropos=0,1
+map00=B 
+map01=##
+map02=##
 
 [TileSideExtensionA]
 name="ExtensionA"
@@ -545,6 +755,10 @@ left=23
 image="{import}/img/Joint02.dds"
 traits=outside
 reverse=TileSideExtensionB
+zeropos=0,1
+map00= A
+map01=##
+map02=A 
 
 [TileSideExtensionB]
 name="ExtensionB"
@@ -553,6 +767,10 @@ left=23
 image="{import}/img/Joint01.dds"
 traits=inside
 reverse=TileSideExtensionA
+zeropos=0,1
+map00=B 
+map01=##
+map02= B
 
 [TileSideTransitionA]
 name="TransitionA"
