--- a/unity/Assets/StreamingAssets/content/D2E/base/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/tiles.ini
@@ -15,6 +15,15 @@ traits=water outside
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 reverse=TileSide1B
+zeropos=0,1
+map00=    A    
+map01=######## 
+map02=######## 
+map03=######## 
+map04=########A
+map05=######## 
+map06=######## 
+map07=   A     
 
 [TileSide1B]
 name="1B"
@@ -40,6 +49,15 @@ left=197
 image="{import}/img/002A.dds"
 traits=water outside
 reverse=TileSide2B
+zeropos=0,1
+map00=   A  
+map01=######
+map02=######
+map03=######
+map04=######
+map05=######
+map06=######
+map07=  A   
 
 [TileSide2B]
 name="2B"
@@ -65,6 +83,12 @@ left=197
 image="{import}/img/003A.dds"
 traits=water outside
 reverse=TileSide3B
+zeropos=1,0
+map00= ###### 
+map01=A###### 
+map02= ######A
+map03= ###### 
+map04=   A    
 
 [TileSide3B]
 name="3B"
@@ -87,6 +111,14 @@ left=210
 image="{import}/img/004A.dds"
 traits=outside
 reverse=TileSide4B
+zeropos=1,1
+map00=   A   
+map01=###### 
+map02=###### 
+map03=###### 
+map04=######A
+map05=###### 
+map06=###### 
 
 [TileSide4B]
 name="4B"
@@ -111,6 +143,12 @@ left=197
 image="{import}/img/005A.dds"
 traits=outside
 reverse=TileSide5B
+zeropos=1,0
+map00= ###### 
+map01=A###### 
+map02= ######A
+map03= ###### 
+map04=   A    
 
 [TileSide5B]
 name="5B"
@@ -133,6 +171,15 @@ left=302
 image="{import}/img/006A.dds"
 traits=outside
 reverse=TileSide6B
+zeropos=0,1
+map00=  A 
+map01=####
+map02=####
+map03=####
+map04=####
+map05=####
+map06=####
+map07= A  
 
 [TileSide6B]
 name="6B"
@@ -158,6 +205,13 @@ left=197
 image="{import}/img/007A.dds"
 traits=inside timber
 reverse=TileSide7B
+zeropos=0,1
+map00=    A 
+map01=######
+map02=######
+map03=######
+map04=######
+map05= A    
 
 [TileSide7B]
 name="7B"
@@ -181,6 +235,12 @@ left=33
 image="{import}/img/008A.dds"
 traits=outside
 reverse=TileSide8B
+zeropos=0,1
+map00=  A  
+map01=#### 
+map02=#### 
+map03=####A
+map04=#### 
 
 [TileSide8B]
 name="8B"
@@ -203,6 +263,12 @@ left=46
 image="{import}/img/009A.dds"
 traits=outside
 reverse=TileSide9B
+zeropos=1,1
+map00=   A  
+map01= #### 
+map02=A#### 
+map03= ####A
+map04= #### 
 
 [TileSide9B]
 name="9B"
@@ -225,6 +291,11 @@ left=46
 image="{import}/img/010A.dds"
 traits=outside farm
 reverse=TileSide10B
+zeropos=1,0
+map00= #### 
+map01=A#### 
+map02= ####A
+map03= #### 
 
 [TileSide10B]
 name="10B"
@@ -246,6 +317,11 @@ left=46
 image="{import}/img/011A.dds"
 traits=outside
 reverse=TileSide11B
+zeropos=1,0
+map00= #### 
+map01=A#### 
+map02= ####A
+map03= #### 
 
 [TileSide11B]
 name="11B"
@@ -267,6 +343,13 @@ left=262.5
 image="{import}/img/012A.dds"
 traits=outside water
 reverse=TileSide12B
+zeropos=1,0
+map00=  ####
+map01=A#####
+map02= #####
+map03=   ###
+map04=   ## 
+map05=   A  
 
 [TileSide12B]
 name="12B"
@@ -291,6 +374,15 @@ left=197
 image="{import}/img/013A.dds"
 traits=outside timber
 reverse=TileSide13B
+zeropos=0,1
+map00=   A  
+map01= #### 
+map02=######
+map03=######
+map04=######
+map05=##    
+map06=##    
+map07=A     
 
 [TileSide13B]
 name="13B"
@@ -316,6 +408,11 @@ left=46
 image="{import}/img/014A.dds"
 traits=outside graves
 reverse=TileSide14B
+zeropos=1,0
+map00= ###  
+map01=A#### 
+map02= ####A
+map03= ###  
 
 [TileSide14B]
 name="14B"
@@ -337,6 +434,13 @@ left=249.5
 image="{import}/img/015A.dds"
 traits=outside
 reverse=TileSide15B
+zeropos=0,1
+map00=   A 
+map01=  ## 
+map02=#####
+map03=#####
+map04=##   
+map05=A    
 
 [TileSide15B]
 name="15B"
@@ -360,6 +464,13 @@ left=46
 image="{import}/img/016A.dds"
 traits=outside
 reverse=TileSide16B
+zeropos=1,1
+map00=   A  
+map01=  ##  
+map02=A#### 
+map03= ####A
+map04=  ##  
+map05=  A   
 
 [TileSide16B]
 name="16B"
@@ -383,6 +494,12 @@ left=59
 image="{import}/img/017A.dds"
 traits=outside
 reverse=TileSide17B
+zeropos=1,1
+map00=    A
+map01=   ##
+map02=   ##
+map03=A####
+map04= ####
 
 [TileSide17B]
 name="17B"
@@ -405,6 +522,12 @@ left=59
 image="{import}/img/018A.dds"
 traits=outside
 reverse=TileSide18B
+zeropos=1,1
+map00=    A
+map01=   ##
+map02=   ##
+map03=A####
+map04= ####
 
 [TileSide18B]
 name="18B"
@@ -428,6 +551,15 @@ left=354.5
 image="{import}/img/019A.dds"
 traits=outside bridge
 reverse=TileSide19B
+zeropos=0,1
+map00=  A
+map01=###
+map02=###
+map03=###
+map04=###
+map05=###
+map06=###
+map07=A  
 
 [TileSide19B]
 name="19B"
@@ -453,6 +585,16 @@ left=367.5
 image="{import}/img/020A.dds"
 traits=outside
 reverse=TileSide20B
+zeropos=1,1
+map00=  A 
+map01= ###
+map02= ###
+map03=  ##
+map04=  ##
+map05=  ##
+map06=  ##
+map07=A###
+map08= ###
 
 [TileSide20B]
 name="20B"
@@ -479,6 +621,10 @@ left=197
 image="{import}/img/021A.dds"
 traits=outside water
 reverse=TileSide21B
+zeropos=1,0
+map00= ###### 
+map01=A######A
+map02= ###### 
 
 [TileSide21B]
 name="21B"
@@ -499,6 +645,9 @@ left=197
 image="{import}/img/022A.dds"
 traits=outside
 reverse=TileSide22B
+zeropos=1,0
+map00=A###### 
+map01= ######A
 
 [TileSide22B]
 name="22B"
@@ -518,6 +667,10 @@ left=197
 image="{import}/img/023A.dds"
 traits=outside
 reverse=TileSide23B
+zeropos=1,0
+map00=A###### 
+map01= ######A
+map02=   A    
 
 [TileSide23B]
 name="23B"
@@ -538,6 +691,10 @@ left=184
 image="{import}/img/024A.dds"
 traits=outside
 reverse=TileSide24B
+zeropos=0,0
+map00=###### 
+map01=######A
+map02=A      
 
 [TileSide24B]
 name="24B"
@@ -558,6 +715,14 @@ left=420
 image="{import}/img/025A.dds"
 traits=outside
 reverse=TileSide25B
+zeropos=1,1
+map00=  A
+map01= ##
+map02= ##
+map03= ##
+map04= ##
+map05=A##
+map06= ##
 
 [TileSide25B]
 name="25B"
@@ -582,6 +747,12 @@ left=46
 image="{import}/img/026A.dds"
 traits=outside
 reverse=TileSide26B
+zeropos=0,1
+map00=  A 
+map01= ## 
+map02=####
+map03=####
+map04= A  
 
 [TileSide26B]
 name="26B"
@@ -604,6 +775,11 @@ left=151
 image="{import}/img/027A.dds"
 traits=outside
 reverse=TileSide27B
+zeropos=1,0
+map00= ## 
+map01= ##A
+map02=A##
+map03= ## 
 
 [TileSide27B]
 name="27B"
@@ -625,6 +801,11 @@ left=46
 image="{import}/img/028A.dds"
 traits=outside
 reverse=TileSide28B
+zeropos=0,1
+map00=   A
+map01=####
+map02=####
+map03=A   
 
 [TileSide28B]
 name="28B"
@@ -646,6 +827,9 @@ left=46
 image="{import}/img/029A.dds"
 traits=outside
 reverse=TileSide29B
+zeropos=1,0
+map00=A#### 
+map01= ####A
 
 [TileSide29B]
 name="29B"
@@ -665,6 +849,8 @@ left=46
 image="{import}/img/030A.dds"
 traits=outside
 reverse=TileSide30B
+map00=A#### 
+map01= ####A
 
 [TileSide30B]
 name="30B"
