#654 Updating for new imported images

--- a/unity/Assets/StreamingAssets/content/MoM/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/images.ini
@@ -25,9 +25,6 @@ image="{import}/img/CutsceneFrame.dds"
 [ImageCutsceneTextTopper]
 image="{import}/img/CutsceneTextTopper.dds"
 
-[ImageDeskBlood]
-image="{import}/img/Image_1.dds"
-
 [ImagePortal]
 image="{import}/img/Image_1_SHARED.dds"
 
@@ -74,7 +71,7 @@ image="{import}/img/Mythos_Phase.dds"
 image="{import}/img/PicturePuzzleBG.dds"
 
 [ImagePuzzle1_background]
-image="{import}/img/Puzzle1_background.dds"
+image="{import}/img/Code_BG.dds"
 
 [ImageTimberPuzzleBG]
 image="{import}/img/PuzzleBG.dds"
