--- a/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
@@ -1,56 +1,56 @@
 [ItemCommonBulletproofVest]
-name={ffg:COMMON_ITEM_25_AUTOMATIC}
-image={import}/img/CommonItem_25_Automatic.dds
+name={ffg:COMMON_ITEM_BULLETPROOF_VEST}
+image={import}/img/CommonItem_BulletproofVest.dds
 traits=equipment common
 
 [ItemCommonEnhancingSerum]
-name={ffg:COMMON_ITEM_25_AUTOMATIC}
-image={import}/img/CommonItem_25_Automatic.dds
+name={ffg:COMMON_ITEM_ENHANCING_SERUM}
+image={import}/img/CommonItem_EnhancingSerum.dds
 traits=equipment common
 
 [ItemCommonFlask]
-name={ffg:COMMON_ITEM_25_AUTOMATIC}
-image={import}/img/CommonItem_25_Automatic.dds
+name={ffg:COMMON_ITEM_FLASK}
+image={import}/img/CommonItem_Flask.dds
 traits=equipment common
 
 [ItemCommonGamblersDice]
-name={ffg:COMMON_ITEM_25_AUTOMATIC}
-image={import}/img/CommonItem_25_Automatic.dds
+name={ffg:COMMON_ITEM_GAMBLERS_DICE}
+image={import}/img/CommonItem_GamblersDice.dds
 traits=equipment common
 
 [ItemCommonMentalStimulant]
-name={ffg:COMMON_ITEM_25_AUTOMATIC}
-image={import}/img/CommonItem_25_Automatic.dds
+name={ffg:COMMON_ITEM_MENTAL_STIMULANT}
+image={import}/img/CommonItem_MentalStimulant.dds
 traits=equipment common
 
 [ItemCommonMoonPotion]
-name={ffg:COMMON_ITEM_25_AUTOMATIC}
-image={import}/img/CommonItem_25_Automatic.dds
+name={ffg:COMMON_ITEM_MOON_POTION}
+image={import}/img/CommonItem_MoonPotion.dds
 traits=equipment common
 
 [ItemCommonMutationJuice]
-name={ffg:COMMON_ITEM_25_AUTOMATIC}
-image={import}/img/CommonItem_25_Automatic.dds
+name={ffg:COMMON_ITEM_MUTATION_JUICE}
+image={import}/img/CommonItem_MutationJuice.dds
 traits=equipment common
 
 [ItemCommonOcularExtract]
-name={ffg:COMMON_ITEM_25_AUTOMATIC}
-image={import}/img/CommonItem_25_Automatic.dds
+name={ffg:COMMON_ITEM_OCULAR_EXTRACT}
+image={import}/img/CommonItem_OcularExtract.dds
 traits=equipment common
 
 [ItemCommonScalpel]
-name={ffg:COMMON_ITEM_BLACKJACK}
-image={import}/img/CommonItem_Blackjack.dds
+name={ffg:COMMON_ITEM_SCALPEL}
+image={import}/img/CommonItem_Scalpel.dds
 traits=weapon bladedweapon common
 
 [ItemCommonSnubnoseRevolver]
-name={ffg:COMMON_ITEM_ENCHANTED_BLADE}
-image={import}/img/CommonItem_EnchantedBlade.dds
+name={ffg:COMMON_ITEM_SNUBNOSE_REVOLVER}
+image={import}/img/CommonItem_SnubnoseRevolver.dds
 traits=weapon firearm common
 
 [ItemCommonThermos]
-name={ffg:COMMON_ITEM_FINE_CLOTHES}
-image={import}/img/CommonItem_FineClothes.dds
+name={ffg:COMMON_ITEM_THERMOS}
+image={import}/img/CommonItem_Thermos.dds
 traits=equipment common
 
 [ItemUniqueBecky]
