#654 add unique items (except Elixir)

--- a/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
@@ -16,7 +16,7 @@ items.ini
 tokens.ini
 
 ; Todo
-; item images/descriptions
+; elixir unique item?
 ; spells
 ; MAD20 tile image
 ; review new text
