--- a/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
@@ -54,46 +54,46 @@ image={import}/img/CommonItem_Thermos.dds
 traits=equipment common
 
 [ItemUniqueBecky]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_BECKY}
+image={import}/img/UniqueItem_Becky.dds
 traits=weapon firearm unique
 
 [ItemUniqueBonePipes]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_BONE_PIPES}
+image={import}/img/UniqueItem_BonePipes.dds
 traits=relic unique
 
 [ItemUniqueDeVermisMysteriis]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_DE_VERMIS_MYSTERIIS}
+image={import}/img/UniqueItem_DeVermisMysteris.dds
 traits=evidence tome unique
 
 [ItemUniqueLedger]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_LEDGER}
+image={import}/img/UniqueItem_Ledger.dds
 traits=evidence tome unique
 
 [ItemUniqueMysteriousIdol]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_MYSTERIOUS_IDOL}
+image={import}/img/UniqueItem_MysteriousIdol.dds
 traits=relic unique
 
 [ItemUniqueOldMap]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_OLD_MAP}
+image={import}/img/UniqueItem_OldMap.dds
 traits=evidence unique
 
 [ItemUniqueStarCalendar]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_STAR_CALENDAR}
+image={import}/img/UniqueItem_StarCalendar.dds
 traits=relic unique
 
 [ItemUniqueStoneChest]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_STONE_CHEST}
+image={import}/img/UniqueItem_StoneChest.dds
 traits=relic unique
 
 [ItemUniqueStrangeTablet]
-name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
-image={import}/img/UniqueItem_CultistsJournal.dds
+name={ffg:UNIQUE_ITEM_STRANGE_TABLET}
+image={import}/img/UniqueItem_StrangeTablet.dds
 traits=relic unique
