--- a/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
@@ -97,3 +97,18 @@ traits=relic unique
 name={ffg:UNIQUE_ITEM_STRANGE_TABLET}
 image={import}/img/UniqueItem_StrangeTablet.dds
 traits=relic unique
+
+[ItemSpellAzureFlame]
+name={ffg:SPELL_AZURE_FLAME}
+image={import}/img/Spell_AzureFlame.dds
+traits=spell
+
+[ItemSpellForcedLearning]
+name={ffg:SPELL_FORCED_LEARNING}
+image={import}/img/Spell_ForcedLearning.dds
+traits=spell
+
+[ItemSpellImplantSuggestion]
+name={ffg:SPELL_IMPLANT_SUGGESTION}
+image={import}/img/Spell_ImplantSuggestion.dds
+traits=spell
