#654 TIles added except for reverse and sewer inside/outside.

--- a/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
@@ -17,9 +17,10 @@ tokens.ini
 
 ; Todo
 ; elixir unique item?
+; sewer inside/outside
+; tile reverse
 ; MAD20 tile image
 ; review new text
-; tiles
 ; monsters images/descriptions
 ; monsters activations/evade/horror
 ; monster health
