#654 New MAD20 tile, puzzle images

--- a/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
@@ -19,8 +19,8 @@ tokens.ini
 ; elixir unique item?
 ; sewer inside/outside
 ; tile reverse
-; MAD20 tile image
-; review new text
+; MAD25 Mythos
+; fleshless attacks
 ; monsters images/descriptions
 ; monsters activations/evade/horror
 ; monster health
