--- a/unity/Assets/StreamingAssets/content/MoM/base/puzzle.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/puzzle.ini
@@ -15,3 +15,9 @@ image="{import}/img/ArtWire_3x3.dds"
 
 [PuzzleWire4x2]
 image="{import}/img/artWires_4x2.dds"
+
+[PuzzleStarsofHades3x3]
+image="{import}/img/artStarsofHades_3x3.dds"
+
+[PuzzleTarotDeath4x2]
+image="{import}/img/artTarotDeath4x2.dds"
