--- a/unity/Assets/StreamingAssets/content/MoM/base/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tiles.ini
@@ -115,8 +115,7 @@ reverse=TileSideStreetCorner2
 
 [TileSideFleaMarket]
 name={ffg:TILE_FLEA_MARKET_MAD20}
-image="img/Tile_Flea_Market_MAD20.jpg"
-pps=72
+image="{import}/img/Tile_Flea_Market_MAD20.dds"
 traits=outside medium
 reverse=TileSideBasement
 
