#654 new images, monster tokens.

--- a/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
@@ -1,19 +1,19 @@
 [TokenSkeleton]
-name={ffg:MONSTER_THRALL}
-image="{import}/img/Monster_Thrall.dds"
+name={ffg:MONSTER_SKELETON}
+image="{import}/img/Monster_Skeleton.dds"
 traits=monster
 
 [TokenHiredGun]
-name={ffg:MONSTER_THRALL}
-image="{import}/img/Monster_Thrall.dds"
+name={ffg:MONSTER_HIRED_GUN}
+image="{import}/img/Monster_Hired_Gun.dds"
 traits=monster
 
 [TokenLloigor]
-name={ffg:MONSTER_THRALL}
-image="{import}/img/Monster_Thrall.dds"
+name={ffg:MONSTER_LLOIGOR}
+image="{import}/img/Monster_Lloiger.dds"
 traits=monster
 
 [TokenStarVampire]
-name={ffg:MONSTER_THRALL}
-image="{import}/img/Monster_Thrall.dds"
+name={ffg:MONSTER_STAR_VAMPIRE}
+image="{import}/img/Monster_Star_Vampire.dds"
 traits=monster
