--- a/unity/Assets/StreamingAssets/content/MoM/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/images.ini
@@ -126,3 +126,39 @@ image="{import}/img/Scenery_Trees_Right.dds"
 
 [ImageStartingItemsTitleBar]
 image="{import}/img/StartingItemsTitleBar.dds"
+
+[ImageAlchemyBottlePuzzle]
+image="{import}/img/alchemybottlePuzzle.dds"
+
+[ImageStarsofHades]
+image="{import}/img/artStarsofHades_3x3.dds"
+
+[ImageStatueClipped]
+image="{import}/img/ArtStatue_Clipped.dds"
+
+[ImageTarotDeath]
+image="{import}/img/artTarotDeath4x2.dds"
+
+[ImageLaneBG]
+image="{import}/img/Lane_BG.dds"
+
+[ImageScenarioAA]
+image="{import}/img/Scenario_AA.dds"
+
+[ImageScenarioGoA]
+image="{import}/img/Scenario_GoA.dds"
+
+[ImageScenarioIFE]
+image="{import}/img/Scenario_IFE.dds"
+
+[ImageTower4Piece]
+image="{import}/img/Tower_4Piece.dds"
+
+[ImageTower5Piece]
+image="{import}/img/Tower_5Piece.dds"
+
+[ImageTower6Piece]
+image="{import}/img/Tower_6Piece.dds"
+
+[ImageGrotesque]
+image="{import}/img/Unique_Grotesque.dds"
