#654 add fleshless investigator attacks.

--- a/unity/Assets/StreamingAssets/content/MoM/base/attacks.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/attacks.ini
@@ -1198,3 +1198,118 @@ text={ffg:ATTACK_UNARMED_VS_SPIRIT_16}
 target=spirit
 attacktype=unarmed
 
+
+[AttackBladedVsFleshless01]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_01}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless02]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_02}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless03]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_03}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless04]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_04}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless05]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_05}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless06]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_06}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless07]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_07}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless08]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_08}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless09]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_09}
+target=fleshless
+attacktype=bladed
+
+[AttackBladedVsFleshless10]
+text={ffg:ATTACK_BLADED_VS_FLESHLESS_10}
+target=fleshless
+attacktype=bladed
+
+[AttackFirearmVsFleshless01]
+text={ffg:ATTACK_FIREARM_VS_FLESHLESS_01}
+target=fleshless
+attacktype=firearm
+
+[AttackFirearmVsFleshless02]
+text={ffg:ATTACK_FIREARM_VS_FLESHLESS_02}
+target=fleshless
+attacktype=firearm
+
+[AttackFirearmVsFleshless03]
+text={ffg:ATTACK_FIREARM_VS_FLESHLESS_03}
+target=fleshless
+attacktype=firearm
+
+[AttackFirearmVsFleshless04]
+text={ffg:ATTACK_FIREARM_VS_FLESHLESS_04}
+target=fleshless
+attacktype=firearm
+
+[AttackHeavyVsFleshless01]
+text={ffg:ATTACK_HEAVY_WEAPON_VS_FLESHLESS_01}
+target=fleshless
+attacktype=heavy
+
+[AttackHeavyVsFleshless02]
+text={ffg:ATTACK_HEAVY_WEAPON_VS_FLESHLESS_02}
+target=fleshless
+attacktype=heavy
+
+[AttackHeavyVsFleshless03]
+text={ffg:ATTACK_HEAVY_WEAPON_VS_FLESHLESS_03}
+target=fleshless
+attacktype=heavy
+
+[AttackSpellVsFleshless01]
+text={ffg:ATTACK_HEAVY_WEAPON_VS_FLESHLESS_01}
+target=fleshless
+attacktype=spell
+
+[AttackSpellVsFleshless02]
+text={ffg:ATTACK_HEAVY_WEAPON_VS_FLESHLESS_02}
+target=fleshless
+attacktype=spell
+
+[AttackSpellVsFleshless03]
+text={ffg:ATTACK_HEAVY_WEAPON_VS_FLESHLESS_03}
+target=fleshless
+attacktype=spell
+
+[AttackUnarmedSpellVsFleshless01]
+text={ffg:ATTACK_UNARMED_VS_FLESHLESS_01}
+target=fleshless
+attacktype=unarmed
+
+[AttackUnarmedSpellVsFleshless02]
+text={ffg:ATTACK_UNARMED_VS_FLESHLESS_02}
+target=fleshless
+attacktype=unarmed
+
+[AttackUnarmedSpellVsFleshless03]
+text={ffg:ATTACK_UNARMED_VS_FLESHLESS_03}
+target=fleshless
+attacktype=unarmed
