--- a/unity/Assets/StreamingAssets/content/MoM/soa/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/monsters.ini
@@ -1,7 +1,7 @@
 [MonsterSkeleton]
 name={ffg:MONSTER_SKELETON}
 image="{import}/img/Monster_Skeleton.dds"
-traits=humanoid
+traits=fleshless
 awareness=2
 horror=4
 brawn=2
@@ -17,7 +17,7 @@ brawn=2
 [MonsterLloigor]
 name={ffg:MONSTER_LLOIGOR}
 image="{import}/img/Monster_Lloiger.dds"
-traits=humanoid
+traits=beast
 awareness=7
 horror=9
 brawn=5
@@ -25,7 +25,7 @@ brawn=5
 [MonsterStarVampire]
 name={ffg:MONSTER_STAR_VAMPIRE}
 image="{import}/img/Monster_Star_Vampire.dds"
-traits=humanoid
+traits=beast
 awareness=4
 horror=6
 brawn=3
