--- a/unity/Assets/StreamingAssets/content/MoM/soa/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/tiles.ini
@@ -4,6 +4,7 @@ image="{import}/img/Tile_Diner_MAD25.dds"
 traits=inside big
 aspect=1.5
 pps=146.28571
+reverse=TileSideExhibitEntrance
 
 [TileSideExhibitEntrance]
 name={ffg:TILE_EXHIBIT_ENTRANCE_MAD25}
@@ -11,6 +12,7 @@ image="{import}/img/Tile_Exhibit_Entrance_MAD25.dds"
 traits=inside big
 aspect=1.5
 pps=146.28571
+reverse=TileSideDiner
 
 [TileSideYard1MAD25]
 name={ffg:TILE_YARD_1_MAD25}
