#654 Adding horror checks.

--- a/unity/Assets/StreamingAssets/content/MoM/base/horror.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/horror.ini
@@ -1234,3 +1234,202 @@ text={ffg:MONSTER_THRALL_HORROR_04}
 monster=Thrall
 text={ffg:MONSTER_THRALL_HORROR_10}
 
+[HorrorSkeleton01]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_01}
+
+[HorrorSkeleton02]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_02}
+
+[HorrorSkeleton03]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_03}
+
+[HorrorSkeleton04]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_04}
+
+[HorrorSkeleton05]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_05}
+
+[HorrorSkeleton06]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_06}
+
+[HorrorSkeleton07]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_07}
+
+[HorrorSkeleton08]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_08}
+
+[HorrorSkeleton09]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_09}
+
+[HorrorSkeleton10]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_10}
+
+[HorrorSkeleton11]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_11}
+
+[HorrorSkeleton12]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_HORROR_12}
+
+[HorrorHiredGun01]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_01}
+
+[HorrorHiredGun02]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_02}
+
+[HorrorHiredGun03]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_03}
+
+[HorrorHiredGun04]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_04}
+
+[HorrorHiredGun05]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_05}
+
+[HorrorHiredGun06]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_06}
+
+[HorrorHiredGun07]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_07}
+
+[HorrorHiredGun08]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_08}
+
+[HorrorHiredGun09]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_09}
+
+[HorrorHiredGun10]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_10}
+
+[HorrorHiredGun11]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_11}
+
+[HorrorHiredGun12]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_HORROR_12}
+
+[HorrorStarVampire01]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_01}
+
+[HorrorStarVampire02]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_02}
+
+[HorrorStarVampire03]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_03}
+
+[HorrorStarVampire04]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_04}
+
+[HorrorStarVampire05]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_05}
+
+[HorrorStarVampire06]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_06}
+
+[HorrorStarVampire07]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_07}
+
+[HorrorStarVampire08]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_08}
+
+[HorrorStarVampire09]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_09}
+
+[HorrorStarVampire10]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_10}
+
+[HorrorStarVampire11]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_11}
+
+[HorrorStarVampire12]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_12}
+
+[HorrorStarVampire0]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_0}
+
+[HorrorStarVampire0]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_HORROR_0}
+
+[HorrorLloigor01]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_01}
+
+[HorrorLloigor02]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_02}
+
+[HorrorLloigor03]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_03}
+
+[HorrorLloigor04]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_04}
+
+[HorrorLloigor05]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_05}
+
+[HorrorLloigor06]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_06}
+
+[HorrorLloigor07]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_07}
+
+[HorrorLloigor08]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_08}
+
+[HorrorLloigor09]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_09}
+
+[HorrorLloigor10]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_10}
+
+[HorrorLloigor11]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_11}
+
+[HorrorLloigor12]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_HORROR_12}
