--- a/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
@@ -20,9 +20,7 @@ tokens.ini
 ; sewer inside/outside
 ; tile reverse
 ; MAD25 Mythos
-; fleshless attacks
-; monsters activations/evade/horror
+; monsters activations/evade
 ; monster health
-; monster traits
 ; puzzle symbol set
 ; review atlas for new tokens
