--- a/unity/Assets/StreamingAssets/content/MoM/base/evade.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/evade.ini
@@ -1206,3 +1206,194 @@ text={ffg:MONSTER_ZOMBIE_EVADE_12}
 monster=Thrall
 text={ffg:MONSTER_THRALL_EVADE_01}
 
+[EvadeHiredGun01]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_01}
+
+[EvadeHiredGun02]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_02}
+
+[EvadeHiredGun03]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_03}
+
+[EvadeHiredGun04]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_04}
+
+[EvadeHiredGun05]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_05}
+
+[EvadeHiredGun06]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_06}
+
+[EvadeHiredGun07]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_07}
+
+[EvadeHiredGun08]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_08}
+
+[EvadeHiredGun09]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_09}
+
+[EvadeHiredGun10]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_10}
+
+[EvadeHiredGun11]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_11}
+
+[EvadeHiredGun12]
+monster=HiredGun
+text={ffg:MONSTER_HIRED_GUN_EVADE_12}
+
+[EvadeSkeleton01]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_01}
+
+[EvadeSkeleton02]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_02}
+
+[EvadeSkeleton03]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_03}
+
+[EvadeSkeleton04]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_04}
+
+[EvadeSkeleton05]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_05}
+
+[EvadeSkeleton06]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_06}
+
+[EvadeSkeleton07]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_07}
+
+[EvadeSkeleton08]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_08}
+
+[EvadeSkeleton09]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_09}
+
+[EvadeSkeleton10]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_10}
+
+[EvadeSkeleton11]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_11}
+
+[EvadeSkeleton12]
+monster=Skeleton
+text={ffg:MONSTER_SKELETON_EVADE_12}
+
+[EvadeStarVampire01]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_01}
+
+[EvadeStarVampire02]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_02}
+
+[EvadeStarVampire03]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_03}
+
+[EvadeStarVampire04]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_04}
+
+[EvadeStarVampire05]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_05}
+
+[EvadeStarVampire06]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_06}
+
+[EvadeStarVampire07]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_07}
+
+[EvadeStarVampire08]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_08}
+
+[EvadeStarVampire09]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_09}
+
+[EvadeStarVampire10]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_10}
+
+[EvadeStarVampire11]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_11}
+
+[EvadeStarVampire12]
+monster=StarVampire
+text={ffg:MONSTER_STAR_VAMPIRE_EVADE_12}
+
+[EvadeLloigor01]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_01}
+
+[EvadeLloigor02]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_02}
+
+[EvadeLloigor03]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_03}
+
+[EvadeLloigor04]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_04}
+
+[EvadeLloigor05]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_05}
+
+[EvadeLloigor06]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_06}
+
+[EvadeLloigor07]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_07}
+
+[EvadeLloigor08]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_08}
+
+[EvadeLloigor09]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_09}
+
+[EvadeLloigor10]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_10}
+
+[EvadeLloigor11]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_11}
+
+[EvadeLloigor12]
+monster=Lloigor
+text={ffg:MONSTER_LLOIGOR_EVADE_12}
