--- a/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
@@ -20,7 +20,7 @@ tokens.ini
 ; sewer inside/outside
 ; tile reverse
 ; MAD25 Mythos
-; monsters activations/evade
+; monsters activations
 ; monster health
 ; puzzle symbol set
 ; review atlas for new tokens
