Add element images and 1 activation for each new monster.

--- a/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/activations.ini
@@ -3419,3 +3419,27 @@ ability={ffg:MONSTER_THRALL_MOVE_24}
 master={ffg:MONSTER_THRALL_ATTACK_24}
 movebutton={ffg:UI_NOT_IN_SPACE}
 
+[MonsterActivationHiredGun01]
+ability={ffg:MONSTER_HIRED_GUN_MOVE_01}
+master={ffg:MONSTER_THRALL_ATTACK_24}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationHiredGun01]
+ability={ffg:MONSTER_HIRED_GUN_MOVE_01}
+master={ffg:MONSTER_HIRED_GUN_ATTACK_01}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationSkeleton01]
+ability={ffg:MONSTER_SKELETON_MOVE_01}
+master={ffg:MONSTER_SKELETON_ATTACK_01}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationStarVampire01]
+ability={ffg:MONSTER_STAR_VAMPIRE_MOVE_01}
+master={ffg:MONSTER_STAR_VAMPIRE_ATTACK_01}
+movebutton={ffg:UI_NOT_IN_SPACE}
+
+[MonsterActivationLloigor01]
+ability={ffg:MONSTER_LLOIGOR_MOVE_01}
+master={ffg:MONSTER_LLOIGOR_ATTACK_01}
+movebutton={ffg:UI_NOT_WITHIN_1}
