#654 SoA tile sides, sewer inside, elixir.

--- a/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
@@ -112,3 +112,8 @@ traits=spell
 name={ffg:SPELL_IMPLANT_SUGGESTION}
 image={import}/img/Spell_ImplantSuggestion.dds
 traits=spell
+
+[ItemElixir]
+name={ffg:UNIQUE_ITEM_ELIXIR}
+image={import}/img/UniqueItem_Elixir.dds
+traits=elixir
