#663 Adding SoA people tokens.

--- a/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
@@ -1,3 +1,31 @@
+[TokenPinkWoman]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12.dds"
+x=130
+y=520
+height=130
+width=130
+
+[TokenPinkMan]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12.dds"
+x=390
+y=520
+height=130
+width=130
+
+[TokenCyanWoman]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12.dds"
+x=260
+y=520
+height=130
+width=130
+
+[TokenCyanMan]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12.dds"
+x=520
+y=520
+height=130
+width=130
+
 [TokenDephinaBell]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12.dds"
 x=368
