--- a/unity/Assets/StreamingAssets/content/MoM/soa/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/monsters.ini
@@ -5,6 +5,8 @@ traits=fleshless
 awareness=2
 horror=4
 brawn=2
+health=1
+healthperhero=1
 
 [MonsterHiredGun]
 name={ffg:MONSTER_HIRED_GUN}
@@ -13,6 +15,8 @@ traits=humanoid
 awareness=2
 horror=1
 brawn=2
+health=2
+healthperhero=1
 
 [MonsterLloigor]
 name={ffg:MONSTER_LLOIGOR}
@@ -21,6 +25,8 @@ traits=beast
 awareness=7
 horror=9
 brawn=5
+health=1
+healthperhero=2
 
 [MonsterStarVampire]
 name={ffg:MONSTER_STAR_VAMPIRE}
@@ -29,3 +35,5 @@ traits=beast
 awareness=4
 horror=6
 brawn=3
+health=9
+healthperhero=3
