--- a/unity/Assets/StreamingAssets/content/MoM/base/mythos.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/mythos.ini
@@ -1,6 +1,6 @@
 ;Dummy peril to set var names
 [PerilEmpty]
-conditions=$restock,==,0 
+conditions=$restock,==,0 $end,==,0
 
 [PerilFireSpread]
 text={ffg:COMMON_MYTHOS_FIRE:{0}:{rnd:hero}}
