--- a/unity/Assets/StreamingAssets/content/MoM/btt/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/btt/items.ini
@@ -46,9 +46,9 @@ traits=evidence tome unique
 [ItemSpellPoisonMist]
 name={ffg:SPELL_POISON_MIST}
 image={import}/img/Spell_PoisonMist.dds
-traits=spell
+traits=spell spellattack
 
 [ItemSpellArcaneInsight]
 name={ffg:SPELL_ARCANE_INSIGHT}
 image={import}/img/Spell_ArcaneInsight.dds
-traits=spell
+traits=spell spelldefence
