--- a/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/items.ini
@@ -101,17 +101,17 @@ traits=relic unique
 [ItemSpellAzureFlame]
 name={ffg:SPELL_AZURE_FLAME}
 image={import}/img/Spell_AzureFlame.dds
-traits=spell
+traits=spell spellattack
 
 [ItemSpellForcedLearning]
 name={ffg:SPELL_FORCED_LEARNING}
 image={import}/img/Spell_ForcedLearning.dds
-traits=spell
+traits=spell spelldefence
 
 [ItemSpellImplantSuggestion]
 name={ffg:SPELL_IMPLANT_SUGGESTION}
 image={import}/img/Spell_ImplantSuggestion.dds
-traits=spell
+traits=spell spelldefence
 
 [ItemElixir]
 name={ffg:UNIQUE_ITEM_ELIXIR}
