--- a/unity/Assets/StreamingAssets/content/MoM/base/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/items.ini
@@ -301,29 +301,29 @@ traits=key unique
 [ItemSpellFeedTheMind]
 name={ffg:SPELL_FEED_THE_MIND}
 image={import}/img/Spell_FeedTheMind
-traits=spell
+traits=spell spelldefence
 
 [ItemSpellFleshWard]
 name={ffg:SPELL_FLESH_WARD}
 image={import}/img/Spell_FleshWard
-traits=spell
+traits=spell spelldefence
 
 [ItemSpellInstillBravery]
 name={ffg:SPELL_INSTILL_BRAVERY}
 image={import}/img/Spell_InstillBravery
-traits=spell
+traits=spell spelldefence
 
 [ItemSpellShriveling]
 name={ffg:SPELL_SHRIVELING}
 image={import}/img/Spell_Shriveling
-traits=spell
+traits=spell spellattack
 
 [ItemSpellWither]
 name={ffg:SPELL_WITHER}
 image={import}/img/Spell_Wither
-traits=spell
+traits=spell spellattack
 
 [ItemSpellWrack]
 name={ffg:SPELL_WRACK}
 image={import}/img/Spell_Wrack
-traits=spell
+traits=spell spellattack
