Android: MoM 3x2 tiles fixed

--- a/unity/Assets/StreamingAssets/content/MoM/ck/mom1e-tiles/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/ck/mom1e-tiles/tiles.ini
@@ -65,7 +65,6 @@ reverse=TileSideGraveyard
 name={ffg:TILE_FOYER_MAD01}
 image="{import}/img/Tile_Foyer_MAD01"
 aspect=1.5
-pps=146.28571
 traits=inside big stairs
 reverse=TileSideFrontYard
 
@@ -78,7 +77,7 @@ reverse=TileSideLaboratory
 [TileSideFrontYard]
 name={ffg:TILE_FRONT_YARD_MAD01}
 image="img/Tile_Front_Yard_MAD01"
-pps=72
+aspect=1.5
 traits=inside outside big 
 reverse=TileSideFoyer
 
